--- a/Northwind.DataAccess/Northwind.DataAccess.csproj
+++ b/Northwind.DataAccess/Northwind.DataAccess.csproj
@@ -51,10 +51,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstract\ICategoryDal.cs" />
+    <Compile Include="Abstract\IEntityRepository.cs" />
+    <Compile Include="Abstract\IEntityRepository1.cs" />
     <Compile Include="Abstract\IProductDal.cs" />
-    <Compile Include="Concreate\EntityFramework\NorthwindContext.cs" />
-    <Compile Include="Concreate\EntityFramework\ProductDal.cs" />
-    <Compile Include="Concreate\NHibernate\NhProductDal.cs" />
+    <Compile Include="Concrete\EntityFramework\EfCategoryDal.cs" />
+    <Compile Include="Concrete\EntityFramework\EfEntityRepositoryBase.cs" />
+    <Compile Include="Concrete\EntityFramework\NorthwindContext.cs" />
+    <Compile Include="Concrete\EntityFramework\EfProductDal.cs" />
+    <Compile Include="Concrete\NHibernate\NhProductDal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
